--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax/3.1.0/parallax.min.js"></script>
 
+  <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
   <link rel="stylesheet" href="style.css">
   <title>BioTech</title>
   <link rel="shortcut icon" href="./img/doctor.png">
@@ -22,13 +25,15 @@
       <div class="logo">BioTech</div>
 
       <div class="menu-links">
-        <ul>
+        <ul class="menu">
           <a href="">About Us</a>
           <a href="">Product</a>
           <a href="">Partners</a>
           <a href="">Contacts</a>
-
         </ul>
+        <div class="menu-btn">
+          <i class="fas fa-bars"></i>
+        </div>
         <a class="switch">
           <div class="flicker"></div>
           <div class="sun"></div>
